<resources>
    <string name="app_name">Shiksha</string>
    <string name="todo">Shiksha App</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email_id">Email Id</string>
    <string name="register_here">Register Here</string>
    <string name="new_user">New User?</string>
    <string name="sign_in">Sign In</string>
    <string name="sikshaicon">SikshaIcon</string>
</resources>